add test and readme

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git+https://github.com/ShakingMap/simple-i18n.git"
   },
   "author": "zhaoyao91 <zhaoyao91@163.com>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ShakingMap/simple-i18n/issues"
   },
@@ -18,5 +18,8 @@
   ],
   "dependencies": {
     "lodash": "^4.13.1"
+  },
+  "scripts": {
+    "test": "node ./test"
   }
 }
